--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"bugs": {
 		"url": "https://github.com/studioshane/notes-app/issues"
 	},
-	"homepage": "https://github.com/studioshane/notes-app#readme"
+	"homepage": "https://github.com/studioshane/notes-app#readme",
+	"dependencies": {
+		"validator": "^10.11.0"
+	}
 }
-package.json
