gertting input from command line with yargs

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	},
 	"homepage": "https://github.com/studioshane/notes-app#readme",
 	"dependencies": {
-		"validator": "^10.11.0"
+		"chalk": "^2.4.2",
+		"validator": "^10.11.0",
+		"yargs": "^13.2.4"
 	}
 }
